www/css/index.css
@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

a {
  color: inherit;
  text-decoration: none;
}

body {
    font-family: Roboto,Helvetica Neue,Helvetica,Arial,sans-serif;
    background-color: #33373B;
    color: white;
}

.container {
  background-color: green;
  position: fixed;
  height: 76%;
  top:12%;
  display:flex;
  flex-direction:column;
  width:100%;
}

header {
  position: fixed;
  top:0%;
  width:100%;
  height: 12%;
  display: flex;
  background-color:#33373B;
  justify-content: space-between;

  -webkit-box-shadow: 0 4px 5px #242527;
  -moz-box-shadow: 0 4px 5px #242527;
  box-shadow: 0 4px 5px #242527;
}

.hamburger_icon {
  display: flex;
  align-items: center;
}

.menu {
  position: absolute;
  border: 1px solid;
  height: 30px;
  background-color: white;
  top: 50px;
  color: black;
  right: 15px;
  z-index: 1000;
}

.menu ul li p {
  padding: 5px;
  font-size: 18px;
  width: 100%;
}

.hideModal {
  display: none;
}

.goToAngModalContainer {
  position: fixed;
  top: 0px;
  left: 0px;
  height: 100%;
  width:100%;
  background-color: rgba(128, 128, 128, 0.70);
  z-index: 100;
  display: flex;
  justify-content: center;
  align-items: center;
  color: black;
}

.goToAngModalChildWrapper {
  width: 80%;
  background-color: #fff;
  display: flex;
  flex-direction: column;
  border-top-right-radius: 10px;
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
}

.modal_header {
  background: #33373B;
  width: 100%;
  color: #ff8c00;
  display: flex;
  justify-content: center;
  border-top-right-radius: 10px;
  border-top-left-radius: 10px;
}

.modal_body {
  display: flex;
  justify-content: center;
  padding: 15px;
}

.label_select_ang {
  margin-right: 10px;
}

#goToAngText {
  border-top: none;
  border-left: none;
  border-right: none;
  border-bottom-color: #33373B;
}

.modal_footer {
  border-top: 1px solid #33373B;
  width: 100%;
  display: flex;
  height: 40px;
  align-items: center;
  justify-content: flex-end;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
}

.modal_footer button{
  width: 100px;
  height: 30px;
  background: #ff8c00;
  border: none;
  margin-right:5px;
}



/*header {
  height: 70px;
  z-index: 10;
  display: flex;
  background-color:#33373B;
  justify-content: center;
  width:100%;

  -webkit-box-shadow: 0 4px 5px #242527;
  -moz-box-shadow: 0 4px 5px #242527;
  box-shadow: 0 4px 5px #242527;
}
*/
/*.main {
  top:70px;
  width:100%;
  height: 100%;
  position:fixed;
}
*/
.main {
  position: fixed;
  height: 80%;
  top:12%;
  display:flex;
  flex-direction:column;
  width:100%;
}

footer {
  background-color:#33373B;
  position: fixed;
  height: 8%;
  top:92%;
  width:100%;

  -webkit-box-shadow: 0px -4px 3px rgba(50, 50, 50, 0.75);
  -moz-box-shadow:    0px -4px 3px rgba(50, 50, 50, 0.75);
  box-shadow:         0px -4px 3px rgba(50, 50, 50, 0.75);
}


.angNoContainer {
  display: flex;
  justify-content: center;
  padding-top: 8px;
}

li {
  list-style: none;
}

li a {
  display: block;
  width:100%;
  font-size: 24px;
}

.title {
  font-size: 32px;
  align-self: center;
  color: #ff8c00;
}

.list-group-center{
    transform:translateX(0%);
    transition: all ease 0.8s;
}

.list-group-left{
    transform:translateX(-100%);
    transition: all ease 0.8s;
}

.list-group-right{
    transform:translateX(100%);
    transition: all ease 0.8s;
}

.main_screen_list {
  position: absolute;
  top:0px;
  height:100%;
  width:100%;
  overflow:auto;
  display:flex;
  flex-direction:column
}

.tatkra_list {
  position: absolute;
  top:0px;
  height:100%;
  width:100%;
  overflow:auto;
  display:flex;
  flex-direction:column;
  /*padding-bottom: 100px;*/
}

.nitnem_list {
  position: absolute;
  top:0px;
  height:100%;
  width:100%;
  overflow:auto;

  display:flex;
  flex-direction:column;
/*  overflow: scroll;
*/  /*padding-bottom: 100px;*/
}

.list-item {
  padding: 10px;
  border-bottom: 2px Solid
}

.tatkra_list li a {
  display: flex;
  justify-content: space-between;
  height: 100%;
}

.nitnem_baani_page {
  display: flex;
  position: fixed;
  width: 100%;
  flex-direction: column;
  height: 100%;
  overflow: scroll;
  padding-bottom: 100px;
}

.guru_granth_sahib_baani {
  width: 100%;
  height: 100%;
/*  display: flex;
  position: fixed;
  flex-direction: column;
  overflow: scroll;
  padding-bottom: 100px;
*/}

.list-group-center-on-next{
    transform:translateX(0%);
    transition: all ease 0.8s;
}

.list-group-left-on-next{
    transform:translateX(-100%);
    transition: all ease 0.8s;
}

.list-group-right-on-next{
    transform:translateX(100%);
/*     transition: all ease 0.8s; */
}

.list-group-center-on-prev{
    transform:translateX(0%);
    transition: all ease 0.8s;
}

.list-group-left-on-prev{
    transform:translateX(-100%);
/*     transition: all ease 0.8s; */
}

.list-group-right-on-prev{
    transform:translateX(100%);
    transition: all ease 0.8s;
}


.main_screen_listX {
  position: absolute;
  top:0px;
  height:100%;
  width:100%;
  overflow:auto;

  /*top:70px;*/
/*  width:100%;
  position:fixed;
  display:flex;
  flex-direction:column*/
}

.tatkra_listX {
  position: absolute;
  top:0px;
  height:100%;
  width:100%;
  overflow:auto;
}

.nitnem_listX {
  position: absolute;
  top:0px;
  height:100%;
  width:100%;
  overflow:auto;

  /*hack*/
  display: none;
}

.list-item {
  padding: 10px;
  border-bottom: 1px Solid
}


.baaniFormatting {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  padding: 5px;
}

.text-center {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

p {
  font-size: 26px;
}

h1 {
  color: #168216;
  font-size: 32px;
}

.highlightH1 {
  color: #FF8C00;
}

.highlightP {
  color: #FF8C00;
}

#angNo {
  font-size: 24px;
  color: #ff8c00;
}

